==> jimmo/micropython/ports/esp32/bluetooth/bluetooth.c <==
#include "esp_bt.h"
#include "esp_bt_main.h"
#include "esp_bt_device.h"
#include "esp_gap_ble_api.h"
#include "esp_gatts_api.h"
#include "esp_log.h"
#include "freertos/FreeRTOS.h"
#include "freertos/semphr.h"
#include <string.h>
#include "py/mperrno.h"
#include "py/runtime.h"
#include "extmod/modbluetooth.h"

int mp_bt_enable(void) {
    if (mp_bt_is_enabled()) {
        mp_bt_disable();
    }

    esp_bt_controller_config_t bt_cfg = BT_CONTROLLER_INIT_CONFIG_DEFAULT();
    esp_err_t err = esp_bt_controller_init(&bt_cfg);
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    err = esp_bt_controller_enable(ESP_BT_MODE_BLE);
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    err = esp_bluedroid_init();
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    err = esp_bluedroid_enable();
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    err = esp_ble_gap_register_callback(mp_bt_gap_callback);
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    err = esp_ble_gatts_register_callback(mp_bt_gatts_callback);
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    // Register an application profile.
    err = esp_ble_gatts_app_register(0);
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    // Wait for ESP_GATTS_REG_EVT
    xSemaphoreTake(mp_bt_call_complete, portMAX_DELAY);
    if (mp_bt_call_status != 0) {
        return mp_bt_status_errno();
    }
    bluetooth_gatts_if = mp_bt_call_result.gatts_if;
    return 0;
}

void mp_bt_disable(void) {
    esp_bluedroid_disable();
    esp_bluedroid_deinit();
    esp_bt_controller_disable();
    esp_bt_controller_deinit();
}

bool mp_bt_is_enabled(void) {
    return esp_bluedroid_get_status() == ESP_BLUEDROID_STATUS_ENABLED;
}

int mp_bt_advertise_start(bool connectable, uint16_t interval_ms, const uint8_t *adv_data, size_t adv_data_len, const uint8_t *sr_data, size_t sr_data_len) {
    if (adv_data != NULL) {
        esp_err_t err = esp_ble_gap_config_adv_data_raw((uint8_t*)adv_data, adv_data_len);
        if (err != 0) {
            return mp_bt_esp_errno(err);
        }
        // Wait for ESP_GAP_BLE_ADV_DATA_RAW_SET_COMPLETE_EVT
        xSemaphoreTake(mp_bt_call_complete, portMAX_DELAY);
        if (mp_bt_call_status != 0) {
            return mp_bt_status_errno();
        }
    }

    if (sr_data != NULL) {
        esp_err_t err = esp_ble_gap_config_scan_rsp_data_raw((uint8_t*)sr_data, sr_data_len);
        if (err != 0) {
            return mp_bt_esp_errno(err);
        }
        // Wait for ESP_GAP_BLE_SCAN_RSP_DATA_RAW_SET_COMPLETE_EVT
        xSemaphoreTake(mp_bt_call_complete, portMAX_DELAY);
        if (mp_bt_call_status != 0) {
            return mp_bt_status_errno();
        }
    }

    bluetooth_adv_type = connectable ? ADV_TYPE_IND : ADV_TYPE_NONCONN_IND;
    bluetooth_adv_interval = interval_ms;
    esp_err_t err = mp_bt_advertise_start_internal();
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    // Wait for ESP_GAP_BLE_ADV_START_COMPLETE_EVT
    xSemaphoreTake(mp_bt_call_complete, portMAX_DELAY);
    return mp_bt_status_errno();
}

void mp_bt_advertise_stop(void) {
    esp_err_t err = esp_ble_gap_stop_advertising();
    if (err != 0) {
        return;
    }
    // Wait for ESP_GAP_BLE_ADV_STOP_COMPLETE_EVT
    xSemaphoreTake(mp_bt_call_complete, portMAX_DELAY);
}

int mp_bt_add_svc(mp_obj_bt_uuid_t *svc_uuid, mp_obj_bt_uuid_t **chr_uuids, uint8_t *chr_flags, uint16_t *value_handles, size_t chr_len) {
    // Calculate the number of required handles.
    // This formula is a guess. I can't seem to find any documentation for
    // the required number of handles.
    uint16_t num_handles = 1 + chr_len * 2;
    for (size_t i = 0; i < chr_len; i++) {
        if (chr_flags[i] & MP_BT_CHR_FLAG_NOTIFY) {
            num_handles += 1;
        }
    }

    // Create the service.
    esp_gatt_srvc_id_t bluetooth_service_id;
    bluetooth_service_id.is_primary = true;
    bluetooth_service_id.id.inst_id = 0;
    bluetooth_service_id.id.uuid = create_esp_uuid(svc_uuid);
    esp_err_t err = esp_ble_gatts_create_service(bluetooth_gatts_if, &bluetooth_service_id, num_handles);
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    // Wait for ESP_GATTS_CREATE_EVT
    xSemaphoreTake(mp_bt_call_complete, portMAX_DELAY);
    if (mp_bt_call_status != 0) {
        return mp_bt_status_errno();
    }
    uint16_t service_handle = mp_bt_call_result.service_handle;

    // Start the service.
    err = esp_ble_gatts_start_service(service_handle);
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    // Wait for ESP_GATTS_START_EVT
    xSemaphoreTake(mp_bt_call_complete, portMAX_DELAY);
    if (mp_bt_call_status != 0) {
        return mp_bt_status_errno();
    }

    // Add each characteristic.
    for (size_t i = 0; i < chr_len; i++) {
        esp_gatt_perm_t perm = 0;
        perm |= (chr_flags[i] & MP_BT_CHR_FLAG_READ) ? ESP_GATT_PERM_READ : 0;
        perm |= (chr_flags[i] & MP_BT_CHR_FLAG_WRITE) ? ESP_GATT_PERM_WRITE : 0;

        esp_gatt_char_prop_t property = 0;
        property |= (chr_flags[i] & MP_BT_CHR_FLAG_READ) ? ESP_GATT_CHAR_PROP_BIT_READ : 0;
        property |= (chr_flags[i] & MP_BT_CHR_FLAG_WRITE) ? ESP_GATT_CHAR_PROP_BIT_WRITE : 0;
        property |= (chr_flags[i] & MP_BT_CHR_FLAG_NOTIFY) ? ESP_GATT_CHAR_PROP_BIT_NOTIFY : 0;

        esp_attr_value_t char_val = {0};
        char_val.attr_max_len = MP_BT_MAX_ATTR_SIZE;
        char_val.attr_len = 0;
        char_val.attr_value = NULL;

        esp_attr_control_t control = {0};
        control.auto_rsp = ESP_GATT_AUTO_RSP;

        esp_bt_uuid_t uuid = create_esp_uuid(chr_uuids[i]);

        // TODO: Who owns these pointers? (uuid, val, etc).
        esp_err_t err = esp_ble_gatts_add_char(service_handle, &uuid, perm, property, &char_val, &control);
        if (err != 0) {
            return mp_bt_esp_errno(err);
        }
        // Wait for ESP_GATTS_ADD_CHAR_EVT
        xSemaphoreTake(mp_bt_call_complete, portMAX_DELAY);
        if (mp_bt_call_status != 0) {
            return mp_bt_status_errno();
        }

        // Add descriptor if needed.
        if (chr_flags[i] & MP_BT_CHR_FLAG_NOTIFY) {
            esp_attr_value_t descr_value = {0};
            descr_value.attr_max_len = 2;
            descr_value.attr_len = 2;
            // TODO: This seems wrong. Should per per-char.
            descr_value.attr_value = (uint8_t*)descr_value_buf; // looks like this buffer is never written to
            esp_err_t err = esp_ble_gatts_add_char_descr(service_handle, (esp_bt_uuid_t*)&notify_descr_uuid, ESP_GATT_PERM_READ | ESP_GATT_PERM_WRITE, &descr_value, &control);
            if (err != 0) {
                return mp_bt_esp_errno(err);
            }
            // Wait for ESP_GATTS_ADD_CHAR_DESCR_EVT
            xSemaphoreTake(mp_bt_call_complete, portMAX_DELAY);
            if (mp_bt_call_status != 0) {
                return mp_bt_status_errno();
            }
        }

        value_handles[i] = mp_bt_call_result.attr_handle;
    }

    return 0;
}

int mp_bt_disconnect(uint16_t conn_handle) {
    esp_err_t err = esp_ble_gatts_close(bluetooth_gatts_if, conn_handle);
    return mp_bt_esp_errno(err);
}

int mp_bt_chr_value_read(uint16_t value_handle, uint8_t *value, size_t *value_len) {
    uint16_t bt_len;
    const uint8_t *bt_ptr;
    esp_err_t err = esp_ble_gatts_get_attr_value(value_handle, &bt_len, &bt_ptr);
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    memcpy(value, bt_ptr, MIN(*value_len, bt_len));
    return 0;
}

int mp_bt_chr_value_write(uint16_t value_handle, const uint8_t *value, size_t *value_len) {
    esp_err_t err = esp_ble_gatts_set_attr_value(value_handle, *value_len, value);
    if (err != 0) {
        return mp_bt_esp_errno(err);
    }
    // Wait for ESP_GATTS_SET_ATTR_VAL_EVT
    xSemaphoreTake(mp_bt_call_complete, portMAX_DELAY);
    return mp_bt_status_errno();
}

int mp_bt_chr_value_notify_send(uint16_t conn_handle, uint16_t value_handle, const uint8_t *value, size_t *value_len) {
    esp_err_t err = esp_ble_gatts_send_indicate(bluetooth_gatts_if, conn_handle, value_handle, *value_len, (void*)value, false /* notify */);
    return mp_bt_esp_errno(err);
}

int mp_bt_chr_value_indicate(uint16_t conn_handle, uint16_t value_handle) {
    esp_err_t err = esp_ble_gatts_send_indicate(bluetooth_gatts_if, conn_handle, value_handle, 0, NULL, true /* indicate */);
    return mp_bt_esp_errno(err);
}
