==> jimmo/micropython/ports/stm32/bluetooth/bluetooth.c <==
#include "py/runtime.h"
#include "py/mperrno.h"
#include "py/mphal.h"
#include "extmod/modbluetooth.h"
#include "host/ble_hs.h"
#include "host/util/util.h"
#include "nimble/ble.h"
#include "nimble/nimble_port.h"
#include "services/gap/ble_svc_gap.h"
#include "transport/uart/ble_hci_uart.h"

int mp_bt_enable(void) {
    if (ble_state != BLE_STATE_OFF) {
        return 0;
    }

    ble_state = BLE_STATE_STARTING;

    ble_hs_cfg.reset_cb = reset_cb;
    ble_hs_cfg.sync_cb = sync_cb;
    ble_hs_cfg.gatts_register_cb = gatts_register_cb;
    ble_hs_cfg.store_status_cb = ble_store_util_status_rr;

    ble_hci_uart_init();
    nimble_port_init();
    ble_hs_sched_start();

    // Wait for sync callback
    while (ble_state != BLE_STATE_ACTIVE) {
        MICROPY_EVENT_POLL_HOOK
    }

    return 0;
}

void mp_bt_disable(void) {
    ble_state = BLE_STATE_OFF;
    mp_hal_pin_low(pyb_pin_BT_REG_ON);
}

bool mp_bt_is_enabled(void) {
    return ble_state == BLE_STATE_ACTIVE;
}

int mp_bt_advertise_start(mp_bt_adv_type_t type, uint16_t interval_ms, const uint8_t *adv_data, size_t adv_data_len, const uint8_t *sr_data, size_t sr_data_len) {
    int ret;

    mp_bt_advertise_stop();

    if (adv_data != NULL) {
        ret = ble_gap_adv_set_data(adv_data, adv_data_len);
        if (ret != 0) {
            //printf("ble_gap_adv_set_data: fail with %u\n", ret);
            return ble_hs_err_to_errno(ret);
        }
    }

    if (sr_data != NULL) {
        ret = ble_gap_adv_rsp_set_data(sr_data, sr_data_len);
        if (ret != 0) {
            //printf("ble_gap_adv_rsp_set_data: fail with %u\n", ret);
            return ble_hs_err_to_errno(ret);
        }
    }

    // Convert from 1ms to 0.625ms units.
    interval_ms = interval_ms * 8 / 5;
    if (interval_ms < 0x20 || interval_ms > 0x4000) {
        return MP_EINVAL;
    }

    struct ble_gap_adv_params adv_params = {
        .conn_mode = type,
        .disc_mode = BLE_GAP_DISC_MODE_GEN,
        .itvl_min = interval_ms,
        .itvl_max = interval_ms,
        .channel_map = 7, // all 3 channels
    };

    ret = ble_gap_adv_start(BLE_OWN_ADDR_PUBLIC, NULL, BLE_HS_FOREVER, &adv_params, gap_event_cb, NULL);
    if (ret != 0) {
        //printf("ble_gap_adv_start: fail with %u\n", ret);
        return ble_hs_err_to_errno(ret);
    }

    return 0;
}

void mp_bt_advertise_stop(void) {
    if (ble_gap_adv_active()) {
        ble_gap_adv_stop();
    }
}

int mp_bt_add_svc(mp_obj_bt_uuid_t *svc_uuid, mp_obj_bt_uuid_t **chr_uuids, uint8_t *chr_flags, uint16_t *value_handles, size_t chr_len) {
    if (gatts_db == MP_OBJ_NULL) {
        gatts_db = m_new_bluetooth(mp_map_t, 1);
        mp_map_init(gatts_db, chr_len);
    }

    struct ble_gatt_chr_def *chr = m_new_bluetooth(struct ble_gatt_chr_def, chr_len + 1);
    for (size_t i = 0; i < chr_len; ++i) {
        chr[i].uuid = create_nimble_uuid(chr_uuids[i]);
        chr[i].access_cb = chr_access_cb;
        chr[i].arg = NULL;
        chr[i].descriptors = NULL;
        chr[i].flags = chr_flags[i];
        chr[i].min_key_size = 0;
        chr[i].val_handle = &value_handles[i];
    }
    chr[chr_len].uuid = NULL; // no more characteristic

    struct ble_gatt_svc_def *svc = m_new_bluetooth(struct ble_gatt_svc_def, 2);
    svc[0].type = BLE_GATT_SVC_TYPE_PRIMARY;
    svc[0].uuid = create_nimble_uuid(svc_uuid);
    svc[0].includes = NULL;
    svc[0].characteristics = chr;
    svc[1].type = 0; // no more services

    // Note: advertising must be stopped for gatts registration to work

    int ret;

    ret = ble_gatts_reset();
    if (ret != 0) {
        //printf("ble_gatts_reset: fail with %d\n", ret);
        return ble_hs_err_to_errno(ret);
    }

    ret = ble_gatts_count_cfg(svc);
    if (ret != 0) {
        //printf("ble_gatts_count_cfg: fail with %d\n", ret);
        return ble_hs_err_to_errno(ret);
    }

    ret = ble_gatts_add_svcs(svc);
    if (ret != 0) {
        //printf("ble_gatts_add_svcs: fail with %d\n", ret);
        return ble_hs_err_to_errno(ret);
    }

    ret = ble_gatts_start();
    if (ret != 0) {
        //printf("ble_gatts_start: fail with %d\n", ret);
        return ble_hs_err_to_errno(ret);
    }

    for (size_t i = 0; i < chr_len; ++i) {
        mp_map_elem_t *elem = mp_map_lookup(gatts_db, MP_OBJ_NEW_SMALL_INT(value_handles[i]), MP_MAP_LOOKUP_ADD_IF_NOT_FOUND);
        elem->value = MP_OBJ_FROM_PTR(m_new0(gatts_db_entry_t, 1));
    }

    return 0;
}

int mp_bt_disconnect(uint16_t conn_handle) {
    return ble_hs_err_to_errno(ble_gap_terminate(conn_handle, BLE_ERR_REM_USER_CONN_TERM));
}

int mp_bt_chr_value_read(uint16_t value_handle, void *value, size_t *value_len) {
    mp_map_elem_t *elem = mp_map_lookup(gatts_db, MP_OBJ_NEW_SMALL_INT(value_handle), MP_MAP_LOOKUP);
    if (!elem) {
        return MP_EINVAL;
    }
    gatts_db_entry_t *entry = MP_OBJ_TO_PTR(elem->value);
    memcpy(value, entry->data, entry->data_len);
    *value_len = entry->data_len;
    return 0;
}

int mp_bt_chr_value_write(uint16_t value_handle, const void *value, size_t *value_len) {
    mp_map_elem_t *elem = mp_map_lookup(gatts_db, MP_OBJ_NEW_SMALL_INT(value_handle), MP_MAP_LOOKUP);
    if (!elem) {
        return MP_EINVAL;
    }
    gatts_db_entry_t *entry = MP_OBJ_TO_PTR(elem->value);
    entry->data_len = MIN(*value_len, MP_BT_MAX_ATTR_SIZE);
    memcpy(entry->data, value, entry->data_len);
    *value_len = entry->data_len;
    return 0;
}

int mp_bt_chr_value_notify_send(uint16_t value_handle, uint16_t conn_handle, const void *value, size_t *value_len) {
    struct os_mbuf *om = ble_hs_mbuf_from_flat(value, *value_len);
    if (om == NULL) {
        return -1;
    }
    // TODO: check that notify_custom takes ownership of om, if not os_mbuf_free_chain(om).
    return ble_hs_err_to_errno(ble_gattc_notify_custom(conn_handle, value_handle, om));
    return 0;
}

int mp_bt_chr_value_indicate(uint16_t value_handle, uint16_t conn_handle) {
    return ble_hs_err_to_errno(ble_gattc_indicate(conn_handle, value_handle));
    return 0;
}
